2005-09-07 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/cmd_load.cc, cli/parse.yy: Fixed a bug in load command
	where you could not specify both processor and file as literal
	strings.

2005-09-06 J.R. Heisey <jrheisey@sourceforge.com>
	* gui_processor.cc, gui_processor.h, gui_register.h, gui_regwin.cc,
	gui_regwin.h, gui_watch.cc, gui_main.cc: Changed Register_Window::
	registers from type GUIRegister* to GUIRegisterList*.
	Added GUIRegisterList * m_pGUIRegisters to GUI_Processor.
	Now GUIRegisters are instantiated in a GUI_Processor for
	that other windows besides the RAM_RegisterWindow. This
	fixes a bug where you cannot add a register symbol to the
	watch window unless the RAM_RegisterWindow was opened
	once.

	* gui/gui_src_asm.cc, gui/gui_watch.cc: Removed 'Select symbol'
	pop up menu item since it was broken anyway. Added 'Add to watch'
	pop up menu item. Select symbol text in the source window, selecting
	'Add to watch' will add register symbols to the Watch window.

	* src/symbol.cc, src/symbol.h: Added findRegisterSymbol() that
	accepts a const char * as a parameter.

	gui/gui_main.cc: Call new function GUI_Processor::SetCPU() from
	GUI_Interface::NewProcessor(). SetCPU() does some additional
	initialization.

	* src/value.cc, src/value.h: Added toupper(string&) function.

	* gui/gui_src_asm.cc: Changed to use new toupper() function
	due to issues between Windows and Linux.

	* src/operator.cc: quite some type mismatch warning messages

2005-09-03 Scott Dattalo <scott@dattalo.com>
	* src/bitlog.cc, src/bitlog.h: Fixed bugs with the new
	ThreeStateEventLogger class.
	* src/uart.cc, modules/usart.h, modules/usart.cc
	* regression/usart_test/*: added a regression test for the usart
	* src/symbol.h, src/symbol.cc: attribute symbol can now be used in expressons.

2005-09-02 Borut Razem <borut.razem@siol.net>
	* doc/gpsimWin32.html: linking with glib-2.6.6, gtk+-2.6.9, pango-1.8.2

2005-09-02 Manuel Bouyer <bouyer@antioche.eu.org>