@@ -137,12 +137,13 @@ int cmd_load::load(int bit_flag,const char *filename)
 int cmd_load::load(Value *file, Value *pProcessorType) {
   cout << endl;
   string sFile;
-  string sProcType;
-  const char * psProcessorType;
+  const char * psProcessorType = 0;
   sFile = file->toString();
-  sProcType = pProcessorType->toString();
-  psProcessorType = pProcessorType != NULL ?
-    sProcType.c_str() : NULL;
+  if (pProcessorType) {
+    string sProcType = pProcessorType->toString();
+    psProcessorType = sProcType.c_str();
+  }
+
   return gpsim_open(get_active_cpu(), sFile.c_str(),
     psProcessorType);
 }
